@@ -36,7 +36,7 @@ requires:
   Getopt::Std: 0
   IO::Barf: 0
   MARC::File::XML: 1.0.4
-  MARC::Validator: 0.1
+  MARC::Validator: 0.11
   MARC::Validator::Filter: 0
   Unicode::UTF8: 0
   perl: 5.6.0
