@@ -27,7 +27,7 @@ requires 'English' => 0;
 requires 'Getopt::Std' => 0;
 requires 'IO::Barf' => 0;
 requires 'MARC::File::XML' => '1.0.4';
-requires 'MARC::Validator' => 0.10;
+requires 'MARC::Validator' => 0.11;
 requires 'MARC::Validator::Filter' => 0;
 requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/App-MARC-Validator/issues',
