@@ -2,7 +2,7 @@ NAME
     marc-validator - Tool to validate records in MARC file.
 
 SYNOPSIS
-     marc-validator [-d] [-h] [-i id] [-l] [-o output_file] [-p] [-v] [--version] marc_xml_file..
+     marc-validator [-d] [-h] [-i id] [-l] [-o output_file] [-p] [-r] [-v] [--version] marc_xml_file..
 
 DESCRIPTION
     Tool to validate dataset from MARC record collections.
@@ -38,6 +38,10 @@ ARGUMENTS
     *       "-p"
 
             Pretty print JSON output.
+
+    *       "-r"
+
+            Reccomendations.
 
     *       "-v"
 
