@@ -28,7 +28,7 @@ marc-validator - Tool to validate records in MARC file.
 
 =head1 SYNOPSIS
 
- marc-validator [-d] [-h] [-i id] [-l] [-o output_file] [-p] [-v] [--version] marc_xml_file..
+ marc-validator [-d] [-h] [-i id] [-l] [-o output_file] [-p] [-r] [-v] [--version] marc_xml_file..
 
 =head1 DESCRIPTION
 
@@ -68,6 +68,10 @@ Default value is undef.
 =item * C<-p>
 
 Pretty print JSON output.
+
+=item * C<-r>
+
+Reccomendations.
 
 =item * C<-v>
 
